// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel Basic initialization 1`] = `
<Fragment>
  <label
    className="euiFormLabel"
    id="ml_aria_label_undefined"
  />
  <JsonTooltip
    position="top"
  />
</Fragment>
`;

exports[`FormLabel Full initialization 1`] = `
<Fragment>
  <label
    className="euiFormLabel"
    id="ml_aria_label_uid"
  >
    Label Text
  </label>
  <JsonTooltip
    id="uid"
    position="top"
  />
</Fragment>
`;
